--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^0.7.3",
     "gulp-uglify": "^1.0.1",
+    "gulp-uncss": "^0.4.5",
     "vinyl-fs": "^0.3.7"
   }
 }
