--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-minify-css": "^0.3.8",
     "gulp-notify": "^1.5.0",
     "gulp-rename": "^1.2.0",
+    "gulp-rev": "^2.0.1",
     "gulp-sass": "^0.7.3",
     "gulp-uglify": "^1.0.1",
     "gulp-uncss": "^0.4.5",
