--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bower": "1.3.9",
     "bower-files": "^1.5.0",
     "del": "^0.1.2",
+    "event-stream": "^3.1.7",
     "express": "^4.8.7",
+    "glob": "^4.0.6",
     "gulp": "^3.8.7",
     "gulp-autoprefixer": "0.0.10",
     "gulp-cache": "^0.2.2",
@@ -35,8 +37,10 @@
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^2.0.1",
     "gulp-sass": "^0.7.3",
+    "gulp-size": "^1.1.0",
     "gulp-uglify": "^1.0.1",
     "gulp-uncss": "^0.4.5",
+    "gulp-util": "^3.0.1",
     "vinyl-fs": "^0.3.7"
   }
 }
